Add basic styles for sidebar, header, home components

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
 <app-sidebar />
-<section>
+<section class="main-content">
   <app-navbar />
-  <router-outlet />
+  <main>
+    <router-outlet />
+  </main>
 </section>
