--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -3,7 +3,7 @@
     <img src="assets/logo-dark.svg" alt="Kanban logo">
   </div>
   <div class="navigation">
-    <h2>ALL BOARDS(0)</h2>
+    <p class="board-count-title">ALL BOARDS(0)</p>
     <ul>
       <li>+ Create New Board</li>
     </ul>
