--- a/src/app/layout/sidebar/sidebar.component.scss
+++ b/src/app/layout/sidebar/sidebar.component.scss
@@ -11,4 +11,11 @@ aside {
 
 .navigation {
   flex-grow: 1;
+
+  .board-count-title {
+    font-family: 'PlusJakartaSans-Bold';
+    font-size: 12px;
+    color: #828FA3;
+    letter-spacing: 2.4px;
+  }
 }
