--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -3,9 +3,9 @@
     <img src="assets/logo-dark.svg" alt="Kanban logo">
   </div>
   <div class="navigation">
-    <p class="board-count-title">ALL BOARDS(0)</p>
+    <h4>ALL BOARDS(0)</h4>
     <ul>
-      <li>+ Create New Board</li>
+      <li class="create-new-board-item">+ Create New Board</li>
     </ul>
   </div>
   <div class="utils">
