--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,5 @@
+@import '../styles/variables';
+
 .main-content {
   flex-grow: 1;
 
@@ -8,7 +10,7 @@
 main {
   flex-grow: 1;
 
-  background-color: #F4F7FD;
+  background-color: $light-grey;
 }
 
 :host {
