--- a/src/app/layout/sidebar/sidebar.component.scss
+++ b/src/app/layout/sidebar/sidebar.component.scss
@@ -1,5 +1,7 @@
+@import '../../../styles/variables';
+
 aside {
-  border-right: 2px solid #E4EBFA;
+  border-right: 2px solid $lines-light;
   width: 300px;
   height: 100%;
   padding: 25px;
@@ -12,10 +14,12 @@ aside {
 .navigation {
   flex-grow: 1;
 
-  .board-count-title {
-    font-family: 'PlusJakartaSans-Bold';
-    font-size: 12px;
-    color: #828FA3;
-    letter-spacing: 2.4px;
+  li {
+    @include heading-m;
+    color: $medium-grey;
+  }
+
+  .create-new-board-item {
+    color: $main-purple;
   }
 }
