--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,5 @@
+@import './styles/variables';
+
 @font-face {
   font-family: 'PlusJakartaSans-Regular';
   src: url('/assets/fonts/PlusJakartaSans-Regular.ttf') format('truetype');
@@ -5,6 +7,12 @@
   font-style: normal;
 }
 
+@font-face {
+  font-family: 'PlusJakartaSans-Medium';
+  src: url('/assets/fonts/PlusJakartaSans-Medium.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
 
 @font-face {
   font-family: 'PlusJakartaSans-Bold';
@@ -12,6 +20,15 @@
   font-weight: normal;
   font-style: normal;
 }
+
+@font-face {
+  font-family: 'PlusJakartaSans-ExtraBold';
+  src: url('/assets/fonts/PlusJakartaSans-ExtraBold.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+/***** CSS Reset *****/
 
 *,
 *::before,
@@ -30,6 +47,7 @@ html,
 body {
   height: 100%;
   font-family: 'PlusJakartaSans-Regular', sans-serif;
+  color: $medium-grey;
 }
 
 p,
@@ -54,4 +72,22 @@ canvas,
 svg {
   display: block;
   max-width: 100%;
+}
+
+/*********************/
+
+h1 {
+  @include heading-xl;
+}
+
+h2 {
+  @include heading-l;
+}
+
+h3 {
+  @include heading-m;
+}
+
+h4 {
+  @include heading-s;
 }
