--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -2,13 +2,10 @@
   <div class="logo">
     <img src="assets/logo-dark.svg" alt="Kanban logo">
   </div>
-  <div class="navigation">
-    <h4>ALL BOARDS(0)</h4>
-    <ul>
-      <li class="create-new-board-item">+ Create New Board</li>
-    </ul>
-  </div>
+  <app-board-list />
   <div class="utils">
-    <button>Hide Sidebar</button>
+    <button class="hide-sidebar-button">
+      <img src="assets/icon-hide-sidebar.svg" alt="" /><span>Hide Sidebar</span>
+    </button>
   </div>
 </aside>
