--- a/src/app/layout/sidebar/board-list/board-list-item/board-list-item.component.scss
+++ b/src/app/layout/sidebar/board-list/board-list-item/board-list-item.component.scss
@@ -1,20 +1,23 @@
 @import '../../../../../styles/variables';
 
 li {
-  display: flex;
-  gap: 10px;
-
-  padding: 10px 0;
+  padding: 10px 0 10px 25px;
 
   @include heading-m;
   color: $medium-grey;
+
+  .item-content {
+    display: flex;
+    gap: 10px;
+  }
 }
 
 li:hover:not(.create-mode-item) {
-  background-color: $main-purple-hover;
+  background-color: rgba($main-purple, 0.1);
   border-top-right-radius: 30px;
   border-bottom-right-radius: 30px;
-  color: $white;
+  color: $main-purple;
+  cursor: pointer;
 }
 
 .create-mode-item {
