--- a/src/app/layout/sidebar/sidebar.component.scss
+++ b/src/app/layout/sidebar/sidebar.component.scss
@@ -4,7 +4,8 @@ aside {
   border-right: 2px solid $lines-light;
   width: 300px;
   height: 100%;
-  padding: 25px;
+
+  padding: 25px 25px 25px 0;
 
   display: flex;
   flex-direction: column;
@@ -13,6 +14,7 @@ aside {
 
 .logo {
   padding-bottom: 30px;
+  padding-left: 25px;
 }
 
 .utils {
@@ -22,5 +24,16 @@ aside {
 
     display: flex;
     gap: 10px;
+
+    padding: 10px 0px 10px 25px;
+    width: 100%;
+
+    border-top-right-radius: 30px;
+    border-bottom-right-radius: 30px;
+
+    &:hover {
+      color: $main-purple;
+      background-color: rgb($main-purple, 0.1);
+    }
   }
 }
