--- a/src/app/board/board.component.html
+++ b/src/app/board/board.component.html
@@ -1,1 +1,8 @@
-<p>board works!</p>
+@if (boardColumns.length == 0) {
+<div class="empty-board-content">
+  <h2>This board is empty. Create a new column to get started.</h2>
+  <button>+ Add New Column</button>
+</div>
+} @else {
+<h2>WORK IN PROGRESS</h2>
+}
