--- a/src/app/board/board.component.html
+++ b/src/app/board/board.component.html
@@ -1,7 +1,9 @@
 @if (boardColumns.length == 0) {
 <div class="empty-board-content">
   <h2>This board is empty. Create a new column to get started.</h2>
-  <button>+ Add New Column</button>
+  <app-custom-button buttonType="primary" buttonSize="large">
+    + Add New Column
+  </app-custom-button>
 </div>
 } @else {
 <h2>WORK IN PROGRESS</h2>
