--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,4 +1,6 @@
 <header>
   <h1>Platform Launch</h1>
-  <button>+ Add New Task</button>
+  <app-custom-button buttonType="primary" buttonSize="large" [buttonDisabled]="true">
+    + Add New Task
+  </app-custom-button>
 </header>
