Add missing TO DO

--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,4 +1,5 @@
 <header>
+  <!-- TO DO: This must come from the route/service? -->
   <h1>Platform Launch</h1>
   <app-custom-button buttonType="primary" buttonSize="large" [buttonDisabled]="true">
     + Add New Task
