--- a/src/app/board/board.component.html
+++ b/src/app/board/board.component.html
@@ -1,7 +1,7 @@
 @if (boardColumns.length == 0) {
 <div class="empty-board-content">
   <h2>This board is empty. Create a new column to get started.</h2>
-  <app-custom-button buttonType="primary" buttonSize="large">
+  <app-custom-button type="primary" size="large">
     + Add New Column
   </app-custom-button>
 </div>
