--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -4,7 +4,7 @@
   </div>
   <app-board-list />
   <div class="utils">
-    <button class="hide-sidebar-button">
+    <button class="hide-sidebar-button" (click)="onHideSidebar()">
       <img src="assets/icon-hide-sidebar.svg" alt="" /><span>Hide Sidebar</span>
     </button>
   </div>
