--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,7 +1,7 @@
 <header>
   <!-- TO DO: This must come from the route/service? -->
   <h1>Platform Launch</h1>
-  <app-custom-button buttonType="primary" buttonSize="large" [buttonDisabled]="true">
+  <app-custom-button type="primary" buttonSize="large" [disabled]="true">
     + Add New Task
   </app-custom-button>
 </header>
