Align header logic to obtain the current selected board.

--- a/src/app/layout/sidebar/board-list/board-list-item/board-list-item.component.html
+++ b/src/app/layout/sidebar/board-list/board-list-item/board-list-item.component.html
@@ -1,5 +1,5 @@
 @if (!createMode()) {
-  <li [routerLink]="['/board', boardName()]" routerLinkActive="active">
+  <li (click)="onItemClick()" [ngClass]="{'active': boardName() == boardService.activeBoardName()}">
     <!-- TO DO: Fix SVG color, should align with text color -->
     <div class="item-content">
       <img src="assets/icon-board.svg" alt="" /> <span>{{boardName()}}</span>
