--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,6 +1,6 @@
 <header>
   <!-- TO DO: This must come from the route/service? -->
-  <h1>Platform Launch</h1>
+  <h1>{{activeBoardName()}}</h1>
   <app-custom-button type="primary" buttonSize="large" [disabled]="true">
     + Add New Task
   </app-custom-button>
