--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -5,7 +5,7 @@
   <app-board-list />
   <div class="utils">
     <button class="hide-sidebar-button" (click)="onHideSidebar()">
-      <img src="assets/icon-hide-sidebar.svg" alt="" /><span>Hide Sidebar</span>
+      <app-icon-hide-sidebar /><span>Hide Sidebar</span>
     </button>
   </div>
 </aside>
