--- a/src/app/layout/sidebar/sidebar.component.scss
+++ b/src/app/layout/sidebar/sidebar.component.scss
@@ -23,6 +23,7 @@ aside {
     color: $medium-grey;
 
     display: flex;
+    align-items: center;
     gap: 10px;
 
     padding: 10px 0px 10px 25px;
