--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
 }
 
 <section class="main-content">
-  <app-header />
+  <app-header [sidebarHidden]="hideSidebar" />
   <main>
     <router-outlet />
   </main>
