--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,7 +1,13 @@
 <header>
-  <!-- TO DO: This must come from the route/service? -->
-  <h1>{{activeBoardName()}}</h1>
-  <app-custom-button type="primary" buttonSize="large" [disabled]="true">
-    + Add New Task
-  </app-custom-button>
+  @if (sidebarHidden()) {
+  <div class="logo">
+    <img src="assets/logo-dark.svg" alt="Kanban logo">
+  </div>
+  }
+  <section class="title-section">
+    <h1>{{activeBoardName()}}</h1>
+    <app-custom-button type="primary" buttonSize="large" [disabled]="true">
+      + Add New Task
+    </app-custom-button>
+  </section>
 </header>
