--- a/src/app/layout/header/header.component.scss
+++ b/src/app/layout/header/header.component.scss
@@ -4,8 +4,27 @@ header {
   border-bottom: 2px solid $lines-light;
 
   display: flex;
+  align-items: center;
+
+  height: 100%;
+}
+
+.logo {
+  border-right: 2px solid $lines-light;
+  height: 100%;
+
+  display: flex;
+  align-items: center;
+
+  padding: 0 25px;
+}
+
+.title-section {
+  flex-grow: 1;
+
+  display: flex;
   justify-content: space-between;
   align-items: center;
 
-  padding: 20px;
+  padding: 25px 25px;
 }
