--- a/src/app/board/board.component.scss
+++ b/src/app/board/board.component.scss
@@ -4,10 +4,10 @@
   height: 100%;
 
   display: flex;
-  justify-content: center;
-  align-items: center;
+  justify-content: start;
+  align-items: start;
 
-  padding: 10px;
+  padding: 30px;
   text-align: center;
 }
 
@@ -20,4 +20,9 @@ h2 {
   flex-direction: column;
   align-items: center;
   gap: 30px;
+}
+
+.board-content {
+  display: flex;
+  gap: 20px;
 }
