--- a/src/app/board/board.component.html
+++ b/src/app/board/board.component.html
@@ -1,14 +1,16 @@
-@if (boardColumns.length == 0) {
-<div class="empty-board-content">
-  <h2>This board is empty. Create a new column to get started.</h2>
-  <app-custom-button type="primary" size="large">
-    + Add New Column
-  </app-custom-button>
-</div>
-} @else {
-<div class="board-content">
-  @for (column of boardColumns; track $index) {
-  <app-board-column [status]="column.name" [tasks]="column.tasks" />
+<!-- <div class="full-container" [ngClass]="{'center': boardColumns.length == 0}"> -->
+  @if (boardColumns.length == 0) {
+  <div class="empty-board-content">
+    <h2>This board is empty. Create a new column to get started.</h2>
+    <app-custom-button type="primary" size="large">
+      + Add New Column
+    </app-custom-button>
+  </div>
+  } @else {
+  <div class="board-content">
+    @for (column of boardColumns; track $index) {
+    <app-board-column [status]="column.name" [tasks]="column.tasks" />
+    }
+  </div>
   }
-</div>
-}
+<!-- </div> -->
