--- a/src/app/board/board-column/board-column.component.scss
+++ b/src/app/board/board-column/board-column.component.scss
@@ -2,6 +2,9 @@
   text-align: left;
   min-width: 280px;
   max-width: 280px;
+
+  display: flex;
+  flex-direction: column;
 }
 
 .status-container {
@@ -25,4 +28,6 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
+
+  flex-grow: 1;
 }
