--- a/src/app/board/board-column/board-empty-column/board-empty-column.component.scss
+++ b/src/app/board/board-column/board-empty-column/board-empty-column.component.scss
@@ -16,7 +16,7 @@
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
-:host(.empty-column) {
+:host(.new-column) {
   border: 1px dashed $main-purple;
 
   transition: background-color 0.1s ease-in, color 0.1s ease-in;
