--- a/src/app/layout/sidebar/board-list/board-list.component.html
+++ b/src/app/layout/sidebar/board-list/board-list.component.html
@@ -1,7 +1,11 @@
 <h4>ALL BOARDS ({{boards().length}})</h4>
-<ul>
+<ul class="board-list-content">
   @for (board of boards(); track $index) {
     <app-board-list-item [boardName]="board.name" />
   }
-  <app-board-list-item boardName="+ Create New Board" [createMode]="true" />
+</ul>
+<ul>
+  <li>
+    <app-board-list-item boardName="+ Create New Board" [createMode]="true" />
+  </li>
 </ul>
