--- a/src/app/board/board.component.scss
+++ b/src/app/board/board.component.scss
@@ -9,7 +9,7 @@
   display: flex;
   flex-direction: column;
 
-  overflow-x: scroll;
+  overflow-x: auto;
   overflow-y: hidden;
 
   margin-right: 20px;
