--- a/src/app/layout/sidebar/board-list/board-list.component.scss
+++ b/src/app/layout/sidebar/board-list/board-list.component.scss
@@ -3,8 +3,19 @@
 :host {
   flex-grow: 1;
 
+  display: flex;
+  flex-direction: column;
+
+  overflow: auto;
+  height: 100%;
+
   h4 {
     margin-bottom: 10px;
     padding-left: 25px;
   }
+}
+
+.board-list-content {
+  overflow-y: auto;
+  overflow-x: hidden;
 }
