Add subtask completed count

--- a/src/app/board/board-column/board-task/board-task.component.html
+++ b/src/app/board/board-column/board-task/board-task.component.html
@@ -1,2 +1,2 @@
 <h3>{{task().title}}</h3>
-<p>{{0}} of {{task().subtasks.length}} subtasks</p>
+<p>{{completedSubtaskCount()}} of {{task().subtasks.length}} subtasks</p>
