--- a/src/app/layout/sidebar/show-sidebar/show-sidebar.component.html
+++ b/src/app/layout/sidebar/show-sidebar/show-sidebar.component.html
@@ -1,3 +1,3 @@
-<app-custom-button class="show-sidebar-button" action="show-sidebar" type="primary" size="large" (showSidebar)="onShowSidebar()">
+<app-custom-button class="show-sidebar-button" type="primary" size="large" (customClick)="onShowSidebar()">
   <app-icon-show-sidebar />
 </app-custom-button>
