--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,5 @@
 @import './styles/variables';
+@import 'bootstrap/scss/bootstrap';
 
 @font-face {
   font-family: 'PlusJakartaSans-Regular';
@@ -41,6 +42,8 @@
 ul,
 ol {
   list-style: none;
+
+  margin-bottom: 0;
 }
 
 html,
@@ -58,6 +61,7 @@ h4,
 h5,
 h6 {
   overflow-wrap: break-word;
+  margin-bottom: 0;
 }
 
 a {
