Add Manage Board modal and basic logic

--- a/src/app/board/board-column/board-empty-column/board-empty-column.component.html
+++ b/src/app/board/board-column/board-empty-column/board-empty-column.component.html
@@ -3,3 +3,8 @@
 } @else {
   <p>No tasks</p>
 }
+
+<!-- Modal template for managing the complete board -->
+<ng-template #manageBoardModal let-manageBoardModal>
+  <app-manage-board [isNew]="false" [name]="boardName()" [columns]="boardColumns()" />
+</ng-template>
