--- a/src/app/UI/custom-button/custom-button.component.scss
+++ b/src/app/UI/custom-button/custom-button.component.scss
@@ -4,8 +4,11 @@
   border-radius: 30px;
   padding: 15px 20px;
 
+  width: 100%;
+
   display: flex;
   align-items: center;
+  justify-content: center;
 }
 
 .large-size {
