--- a/src/app/board/board.component.html
+++ b/src/app/board/board.component.html
@@ -1,27 +1,13 @@
 @if (boardColumns.length == 0) {
 <div class="empty-board-content">
   <h2>This board is empty. Create a new column to get started.</h2>
-  <app-custom-button type="primary" size="large" (customClick)="onAddNewColumn(content)">
+  <app-custom-button type="primary" size="large" (customClick)="onAddNewColumn(manageBoardModal)">
     + Add New Column
   </app-custom-button>
   
-  <ng-template #content let-modal>
-    <div class="modal-header">
-      <h2 class="custom-modal-title">Add New Column ({{boardService.activeBoardName()}}) </h2>
-    </div>
-    <div class="modal-body">
-      <form>
-        <div class="form-group">
-          <label for="columnName">Column Name</label>
-          <input type="text" class="form-control" id="columnName" placeholder="Enter column name" required>
-        </div>
-      </form>
-    </div>
-    <div class="modal-footer">
-      <app-custom-button type="primary" size="large" (customClick)="onCreateNewColumn()">
-        Create New Column
-      </app-custom-button>
-    </div>
+  <!-- Modal template for managing the complete board -->
+  <ng-template #manageBoardModal let-manageBoardModal>
+    <app-manage-board [isNew]="false" [name]="boardName" [columns]="boardColumns" />
   </ng-template>
 
 </div>
