Finish basic logic for MANAGE BOARD, Change logic for boards data (add ID)

--- a/src/app/UI/custom-button/custom-button.component.html
+++ b/src/app/UI/custom-button/custom-button.component.html
@@ -1,14 +1,14 @@
 <button class="custom-button" [ngClass]="{
-  'primary-mode': type() == 'primary',
-  'secondary-mode': type() == 'secondary',
-  'destructive-mode': type() == 'destructive',
+  'primary-mode': mode() == 'primary',
+  'secondary-mode': mode() == 'secondary',
+  'destructive-mode': mode() == 'destructive',
 
   'large-size': size() == 'large',
   'small-size': size() == 'small',
 
   'disabled': disabled()
   }"
-  
+  [type]="type()"
   (click)="onClick()">
   <ng-content></ng-content>
 </button>
