--- a/src/app/board/board-column/board-empty-column/board-empty-column.component.html
+++ b/src/app/board/board-column/board-empty-column/board-empty-column.component.html
@@ -6,5 +6,5 @@
 
 <!-- Modal template for managing the complete board -->
 <ng-template #manageBoardModal let-manageBoardModal>
-  <app-manage-board [isNew]="false" [name]="boardName()" [columns]="boardColumns()" />
+  <app-manage-board [isNew]="false" [id]="boardId()" />
 </ng-template>
