--- a/src/app/board/board.component.html
+++ b/src/app/board/board.component.html
@@ -1,19 +1,18 @@
-@if (boardColumns.length == 0) {
+@if (boardColumns().length == 0) {
 <div class="empty-board-content">
   <h2>This board is empty. Create a new column to get started.</h2>
-  <app-custom-button type="primary" size="large" (customClick)="onAddNewColumn(manageBoardModal)">
+  <app-custom-button mode="primary" size="large" (customClick)="onAddNewColumn(manageBoardModal)">
     + Add New Column
   </app-custom-button>
   
   <!-- Modal template for managing the complete board -->
   <ng-template #manageBoardModal let-manageBoardModal>
-    <app-manage-board [isNew]="false" [name]="boardName" [columns]="boardColumns" />
+    <app-manage-board [isNew]="false" [id]="boardId()" />
   </ng-template>
-
 </div>
 } @else {
 <div class="board-content">
-  @for (column of boardColumns; track $index) {
+  @for (column of boardColumns(); track $index) {
   <app-board-column [status]="column.name" [statusColor]="column.color" [tasks]="column.tasks" />
   }
   <app-board-column />
