--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -4,9 +4,9 @@
 </div>
 }
 <section class="title-section">
-  <h1>{{activeBoardName()}}</h1>
+  <h1>{{boardName()}}</h1>
   <div class="last-section">
-    <app-custom-button type="primary" buttonSize="large" [disabled]="isBoardEmpty()">
+    <app-custom-button mode="primary" buttonSize="large" [disabled]="isBoardEmpty()">
       + Add New Task
     </app-custom-button>
     <div class="menu-ellipsis">
