--- a/src/app/layout/sidebar/board-list/board-list-item/board-list-item.component.html
+++ b/src/app/layout/sidebar/board-list/board-list-item/board-list-item.component.html
@@ -1,11 +1,11 @@
 @if (!createMode()) {
-  <li (click)="onItemClick()" [ngClass]="{'active': boardName() == boardService.activeBoardName()}">
+  <li (click)="onItemClick()" [ngClass]="{'active': boardId() == boardService.activeBoardId()}">
     <div class="item-content">
       <app-icon-board /><span>{{boardName()}}</span>
     </div>
   </li>
 } @else {
-  <li class="create-mode-item">
+  <li class="create-mode-item" (click)="onCreateNewBoard()">
     <div class="item-content">
       <app-icon-board /><span>{{boardName()}}</span>
     </div>
