--- a/src/app/layout/sidebar/board-list/board-list.component.html
+++ b/src/app/layout/sidebar/board-list/board-list.component.html
@@ -1,11 +1,14 @@
 <h4>ALL BOARDS ({{boards().length}})</h4>
 <ul class="board-list-content">
   @for (board of boards(); track $index) {
-    <app-board-list-item [boardName]="board.name" />
+    <app-board-list-item [boardId]="board.id" [boardName]="board.name" />
   }
 </ul>
 <ul>
-  <li>
-    <app-board-list-item boardName="+ Create New Board" [createMode]="true" />
-  </li>
+  <app-board-list-item boardName="+ Create New Board" [createMode]="true" (createNewBoard)="onCreateNewBoard(manageBoardModal)" />
 </ul>
+
+<!-- Modal template for managing the complete board -->
+<ng-template #manageBoardModal let-manageBoardModal>
+  <app-manage-board [isNew]="true" />
+</ng-template>
