--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -1,4 +1,4 @@
-<div class="logo">
+<div class="logo" (click)="onLogoClick()">
   <img src="assets/logo-dark.svg" alt="Kanban logo">
 </div>
 <app-board-list />
