--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,5 +1,5 @@
 @if (sidebarHidden()) {
-<div class="logo" @fadeInOut>
+<div class="logo" @fadeInOut (click)="onLogoClick()">
   <img src="assets/logo-dark.svg" alt="Kanban logo">
 </div>
 }
