--- a/src/app/layout/sidebar/board-list/board-list.component.html
+++ b/src/app/layout/sidebar/board-list/board-list.component.html
@@ -1,6 +1,6 @@
 <h4>ALL BOARDS ({{boards().length}})</h4>
 <ul class="board-list-content">
-  @for (board of boards(); track $index) {
+  @for (board of boards() | orderBy: 'id'; track $index) {
     <app-board-list-item [boardId]="board.id" [boardName]="board.name" />
   }
 </ul>
