Add view task component (WIP)

--- a/src/app/Task/view-task/view-task.component.html
+++ b/src/app/Task/view-task/view-task.component.html
@@ -1,1 +1,26 @@
-<p>view-task works!</p>
+<div class="modal-header">
+  <h2 class="custom-modal-title">{{task().title}}</h2>
+</div>
+<div class="modal-body">
+  <form class="custom-form">
+    <p class="task-description">{{task().description}}</p>
+    <div class="subtasks-section">
+      <p class="subtasks-status">Subtasks ({{getCompletedSubtaskCount()}}) of ({{task().subtasks.length}})</p>
+      <div class="subtask-items">
+        @for (task of task().subtasks; track $index) {
+        <div class="subtask-item">
+          <input type="checkbox" class="subtask-item-checkbox" [checked]="task.isCompleted" />
+          <p class="subtask-item-title" [ngClass]="{'completed': task.isCompleted, 'incomplete': !task.isCompleted}">
+            {{task.title}}</p>
+        </div>
+        }
+      </div>
+    </div>
+    <div class="form-group">
+      <label for="currentStatus">Current Status</label>
+      <select class="form-control status-select">
+        <option value="Not Started">TBD</option>
+      </select>
+    </div>
+  </form>
+</div>
