Finish first version of viewing/updating task

--- a/src/app/Task/view-task/view-task.component.html
+++ b/src/app/Task/view-task/view-task.component.html
@@ -5,12 +5,14 @@
   <form class="custom-form" [formGroup]="form">
     <p class="task-description">{{task().description}}</p>
     <div class="subtasks-section">
-      <p class="subtasks-status">Subtasks ({{getCompletedSubtaskCount()}} of {{task().subtasks.length}})</p>
+      <p class="subtasks-status">Subtasks ({{getCompletedSubtaskCount}} of {{task().subtasks.length}})</p>
       <div class="subtask-items" formArrayName="subtasks">
         @for (task of getSubtasksControls; track $index) {
-        <div class="subtask-item" [formGroupName]="$index">
-          <input type="checkbox" class="subtask-item-checkbox" formControlName="isCompleted" #isCompleted />
-          <p class="subtask-item-title" [ngClass]="{'completed': task.controls.isCompleted.value, 'incomplete': !task.controls.isCompleted.value}">
+        <div class="subtask-item" [formGroupName]="$index" (click)="onSetCheckedRow(task)">
+          <input type="checkbox" class="subtask-item-checkbox" formControlName="isCompleted" #isCompleted
+            (change)="onControlChange()" />
+          <p class="subtask-item-title"
+            [ngClass]="{'completed': task.controls.isCompleted.value, 'incomplete': !task.controls.isCompleted.value}">
             {{task.controls.title.value}}
           </p>
         </div>
@@ -19,7 +21,7 @@
     </div>
     <div class="form-group">
       <label for="currentStatus">Current Status</label>
-      <app-custom-select [options]="getStatusOptions()" />
+      <app-custom-select [options]="getStatusOptions()" [form]="form" (change)="onControlChange()" />
     </div>
   </form>
 </div>
