--- a/src/app/UI/custom-select/custom-select.component.scss
+++ b/src/app/UI/custom-select/custom-select.component.scss
@@ -1,23 +1,19 @@
 @import '../../../styles/variables';
 
-:host {
-  position: relative;
-}
-
 .custom-select {
   @include body-l;
   color: $black;
 
-  padding-right: 30px;
+  padding: 10px 30px 10px 10px;
   box-shadow: none;
+
+  border: 1px solid rgba(#828FA3, 0.25);
+
+  border-radius: 4px;
+
+  outline: none;
 
   &:focus {
     border-color: $main-purple;
   }
-}
-
-.down-arrow {
-  position: absolute;
-  top: 15px;
-  right: 15px;
 }
