--- a/src/app/Task/view-task/view-task.component.html
+++ b/src/app/Task/view-task/view-task.component.html
@@ -21,7 +21,7 @@
     </div>
     <div class="form-group">
       <label for="currentStatus">Current Status</label>
-      <app-custom-select [options]="getStatusOptions()" [form]="form" (change)="onControlChange()" />
+      <app-custom-select [options]="getStatusOptions()" [form]="form" customFormControlName="status" (change)="onControlChange()" />
     </div>
   </form>
 </div>
